# titanic_machine_learning

./: .gitignore  LICENSE  Makefile  README.md  first_submission.csv  main.py  models.py  preprocessing.py  pyproject.toml  simple_preprocessing.py  submission.csv  submission_Logistic Regression.csv
Titanic ML/: config.py  features.py  model_train.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: mkdocs.yml
docs/docs/: index.md
models/: dataset.py  eda.py  features.py  model_predict.py
notebooks/: 0.1-hjl-feature-engineering.ipynb  0.1-hjl-preprocessing.ipynb  0.2-hjl-feature-engineering.ipynb  0.2-hjl-preprocessing.ipynb
reports/: CS380 group project mid sem project PPT.pptx  lightGBM_classifier.csv  voting_classifier.csv
reports/Submissions/: submission.csv  titanic_submission.csv  titanic_submission_MLP_Classifier.csv  titanic_submission_decision_tree.csv  titanic_submission_log_reg.csv  titanic_submission_vote_classifier.csv  voting_classifier.csv
reports/performance-metrics/: best_model.pkl  best_model_lightgbm.pkl  best_model_voting classifier.csv  model_performance_metrics.txt  performance-metrics
