[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Titanic"
version = "0.0.1"
description = "binary classification model to determine survivability of passengers of the Titanic"
authors = [
  { name = "Justin Landry, Jakob West team 7" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Titanic"]
force_sort_within_sections = true
